# libbasic

./: CMakeLists.txt  README.MD
include/: bigint.h  buffer.h  byte.h  byte_view.h  bytes.h  rlp.h  type_traits.h
test/: CMakeLists.txt  byte_view_test.cpp
